src/app.css
@font-face {
	font-family: 'Dosis';
	src: url('./assets/fonts/Dosis-VariableFont_wght.ttf') format('truetype');
	font-weight: 300 669;
	font-stretch: 75% 125%;
	font-style: normal bold;
	font-display: swap;
}

:root {
	color-scheme: light dark;

	--primary: hsla(96, 76%, 46%, 1);
	--white: light-dark(hsl(0, 0%, 99%), hsl(0, 0%, 5%));
	--black: light-dark(hsl(0, 0%, 5%), hsl(0, 0%, 99%));
	--gray: hsl(210, 11%, 71%);
	--gray-light: light-dark(hsl(210, 11%, 92%), hsl(210, 11%, 31%));
	--gray-bg: light-dark(hsl(210, 11%, 96%), hsl(210, 11%, 10%));
	--red: hsl(0, 100%, 71%);
	--yellow: hsl(44, 95%, 56%);
	--font: 'Dosis', sans-serif;
	--link-color: var(--primary);
	--border: 1px solid var(--gray-light);
	--ease: cubic-bezier(0.65, 0.05, 0.36, 1);
}

*,
*:before,
*:after {
	box-sizing: border-box;
}

[data-theme='dark'] {
	color-scheme: dark;
}
[data-theme='light'] {
	color-scheme: light;
}

body {
	margin: 0;
	font-family: var(--font);
	background-color: var(--white);
	color: var(--black);
}

img {
	max-width: 100%;
}

a {
	color: var(--primary);
}

.visually-hidden {
	position: absolute;
	margin: -1px;
	padding: 0;
	width: 1px;
	height: 1px;
	clip: rect(0 0 0 0);
	overflow: hidden;
}

ul {
	margin: 0;
	list-style: none;
	padding-left: 1rem;
}

li {
	border-bottom: 1px dashed var(--gray);
	padding: 0.5rem 0;
}

li:last-child {
	border-bottom: none;
}

input[type='checkbox'] {
	--checkbox-size: 1rem;
	--chechbox-radius: 0.2rem;
	appearance: none;
	margin: 0 0.5rem 0 0;
	display: inline-flex;
	width: var(--checkbox-size);
	height: var(--checkbox-size);
}

input[type='checkbox']::after {
	content: '';
	background: var(--checkbox-bg, var(--gray-light));
	border: 0.2em solid var(--black);
	border-radius: var(--chechbox-radius);
	width: 100%;
}

input[type='checkbox']:checked {
	--checkbox-bg: var(--primary);
}

table {
	border-collapse: collapse;
	width: 100%;
}

table thead tr {
	border-bottom: var(--border);
}

table tr:nth-child(even) {
	background: var(--gray-light);
}

table th,
table td {
	padding: 0.5rem;
}

table th:not(:last-child) {
	border-right: var(--border);
}

.Content table th {
	font-size: 1.2rem;
	white-space: nowrap;
}

blockquote {
	font-size: clamp(2rem, 3rem, 4vmin);
}

